# gen-runner-tiles

./: .gitignore  README.md  package.json  pnpm-lock.yaml
cli/: package.json
cli/src/: index.ts
cli/src/commands/: config.ts  generate.ts  status.ts
cli/src/lib/: file-queue.ts  job-builder.ts
cli/src/types/: job-spec.ts
docs/: proposal.md  stage-05-plan.md  worker_proposal.md
worker/: pyproject.toml  requirements.txt
worker/src/: main.py
worker/src/core/: job_processor.py  model_registry.py  pipeline_context.py
worker/src/stages/: 01_job_validation.py  02_tileset_setup.py  03_perspective_setup.py  04_reference_synthesis.py  05_diffusion_core.py  06_constraint_enforcement.py  07_failure_recovery.py
