[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gen-runner-tiles-worker"
version = "0.1.0"
description = "Python worker for AI-powered tile generation"
authors = [{name = "Gen Runner Tiles Team"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "diffusers>=0.21.0",
    "transformers>=4.30.0",
    "Pillow>=10.0.0",
    "redis>=4.6.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "structlog>=23.0.0",
    "colorspacious>=1.1.2",
    "scipy>=1.11.0",
]

[project.scripts]
test-pipeline = "src.test_pipeline:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
